Fix horizontal overflow in Volkihar project

--- a/src/components/Heading/index.css
+++ b/src/components/Heading/index.css
@@ -27,6 +27,10 @@
   font-size: var(--fontSizeH4);
 }
 
+.heading--align-auto {
+  text-align: inherit;
+}
+
 .heading--align-start {
   text-align: start;
 }
